@@ -33,10 +33,10 @@ static const int keys[256][5]={
  {-1,-1,-1,-1,-1},
  {-1,-1,-1,-1,-1},
  {-1,-1,-1,-1,-1},
- {-1,-1,-1,-1,-1},
+ {TIKEY_ENTER1,-1,-1,-1,-1},
  {-1,-1,-1,-1,-1},
  {TIKEY_2ND,TIKEY_ESCAPE,TIKEY_DIAMOND,TIKEY_Q,TIKEY_VOID},
- {TIKEY_ENTER1,-1,-1,-1,-1},
+ {TIKEY_CLEAR,-1,-1,-1,-1},
  {TIKEY_2ND,TIKEY_PLUS,TIKEY_4,TIKEY_1,-1},
  {TIKEY_2ND,TIKEY_PLUS,TIKEY_4,TIKEY_2,-1},
  {TIKEY_2ND,TIKEY_PLUS,TIKEY_4,TIKEY_3,-1},
