@@ -19,6 +19,7 @@ SubVersion: $Id$
 	                 (fixes DCOP hang after reset_calc with debugger running, due to the infinite loop protection)
 	- [kevin] $2162: disable "Debug file with TiEmu" when the debugger is running
 	- [kevin] $2162: added Seamonkey to the browser list, suggest Firefox instead of the obsolete Mozilla Suite
+	- [kevin] $2163: clear command line in execute_command
 
 - 10/05/2006, version 2.81:
 	- [roms] $2059: renamed 'code/source' window into 'disassembly'
